# learning_rust

./: Cargo.toml  README.md
book_generative_design/: Cargo.toml
book_nature_of_code/: Cargo.toml
examples/: e01_basic_error_handling.rs
my_learning/: Cargo.toml
my_learning/01_basic/01_ex/: main.rs
my_learning/01_basic/02_ex/: main.rs
my_learning/01_basic/03_ex/: main.rs
my_learning/01_basic/04_ex/: helper.rs  main.rs
my_learning/01_basic/05_ex/: main.rs
my_learning/01_basic/05_ex/helper/: mod.rs
my_nannou/: Cargo.toml
my_nannou/01_basic/: 01_bball.rs  02_noise.rs
