[package]
name = "my_nannou"
version = "0.1.0"
description = "my nannou playground"
edition = "2021"
authors = ["i3oc9i <ivano.coltellacci@gmail.com>"]

[dependencies]
nannou ="0.18.1"

# 01_basic
[[example]]
name = "np_01_01_bball"
path = "01_basic/01_bball.rs"

[[example]]
name = "np_01_02_noise"
path = "01_basic/02_noise.rs"
